--- a/ocean-music-player/manifest.json
+++ b/ocean-music-player/manifest.json
@@ -12,13 +12,13 @@
   "categories": ["music", "entertainment", "multimedia"],
   "icons": [
     {
-      "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 192 192'><rect width='192' height='192' fill='%23001122' rx='20'/><text x='96' y='110' text-anchor='middle' fill='%2300CCDD' font-size='80'>🌊</text></svg>",
+      "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 192 192'><rect width='192' height='192' fill='%23001122' rx='20'/><text x='96' y='110' text-anchor='middle' fill='%2300CCDD' font-size='80'>🎵</text></svg>",
       "sizes": "192x192",
       "type": "image/svg+xml",
       "purpose": "any maskable"
     },
     {
-      "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'><rect width='512' height='512' fill='%23001122' rx='50'/><text x='256' y='300' text-anchor='middle' fill='%2300CCDD' font-size='200'>🌊</text></svg>",
+      "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'><rect width='512' height='512' fill='%23001122' rx='50'/><text x='256' y='300' text-anchor='middle' fill='%2300CCDD' font-size='200'>🎵</text></svg>",
       "sizes": "512x512",
       "type": "image/svg+xml",
       "purpose": "any maskable"
